# agentic_ai_tutorials

./: .gitignore  README.md  pyproject.toml
chatbot/: app.py  architecure_flow.txt  constant_data.py  graph.py  llm.py  nodes.py  retriever.py  run_app.txt  state.py  test_agent.py
chatbot/data/: docs.txt
chatbot/evaluation/: dataset.py  metrics.py  run_eval.py
chatbot/memory/: memory.py
chatbot/nodes/: generate.py  judge.py  reflection.py  rerank.py  retrieval.py  rewrite.py  self_ask.py
codes/: 0_agent.py  1_agentic_rag_project.py  2_simple_agentic_RAG_with_langgraph.py  3_full_agentic_RAG_with_langgraph.py  4_multi_agent_system.py  5_agentic_rag_with_self_ask.py  6_evaluations.py
codes/docs/: battery.txt  byd.txt  ev_market.txt  tesla.txt
competitions/LLM_Science_Exam/: agentic_rag_pipeline.py  agentic_rag_with_langgraph.py  architecture.txt
theory/: agent.txt  agentic_RAG.txt  llm_as_judge.txt  self-ask.txt
