[tool.poetry]
name = "agentic_ai"
version = "0.1.0"
description = "Understainding and Evaluating Agentic AI Systems"
package-mode = false
authors = ["Prasad Ovhal"]

[tool.poetry.dependencies]
python = "3.11.*"
torch = {version = "^2.5.1", source = "pytorch-cu121"}
torchvision = {version = "^0.20.1", source = "pytorch-cu121"}
torchaudio = {version = "^2.5.1", source = "pytorch-cu121"}
datasets = "*"
evaluate = "*"
accelerate = "*"
timm = "*"
safetensors = "*"
langchain = "*"
langchain-core = "*"
langchain-community = "*"
langchain-openai = "*"
langchain-google-genai = "*"
google-generativeai = "*"
langfuse = "^3.14.5"
pydantic = "^2"
scikit-learn = "^1.5"
seaborn = "^0.13.2"
chromadb = "^1.1.0"
faiss-cpu = "^1.13.2"
tiktoken = "^0.12.0"
langchain-text-splitters = "^1.1.1"
ragas = "^0.4.3"
langsmith = "^0.7.9"
rank-bm25 = "^0.2.2"
pymupdf = "^1.27.1"
docling = "^2.76.0"
transformers = "^4.44"
sentence-transformers = "^5.2.3"
tqdm = "^4.67.3"
langchain-huggingface = "^1.2.1"
deepeval = {extras = ["ollama"], version = "^3.8.9"}
ollama = "^0.6.1"
openai = "^2.26.0"
tavily-python = "^0.7.23"
langgraph = "^1.1.0"
llama-index = "^0.14.15"
autogen = "^0.11.2"
haystack-ai = "^2.25.2"
crewai = "^1.10.1"
duckduckgo-search = "^8.1.1"
langchain-ollama = "^1.0.1"
ddgs = "^9.11.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "*"

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"